<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeSearchButtonText" />
        <Button
            android:id="@+id/unregisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeUnregisterButtonText" />
    	<Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeLogoutButtonText" />
        
   
</AbsoluteLayout>
